--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -238,7 +238,7 @@ var sendto = document.querySelector("#sendto"),
   body = document.querySelector("#body"),
   key = document.querySelector("#apikey");  
   if(sendto.trim() === ""){
-result.innerHTML = "<span style='color: red; font-size: 12px;'>Provide A Valid Email To Send</span>";
+result.innerHTML = "<span style='color: #ff0505; font-size: 12px;'>Provide A Valid Email To Send</span>";
   }
 }
     
