--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -172,7 +172,7 @@ border-color: gold;
   <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">API Key: <a target="_blank" href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" style="font-size: 12px; color: gold;">Click To get API key for free</a></span>
    <textarea maxlength="100" placeholder="YourSuperSecretAPIKey**" id="apikey" type="password" style="margin-top: 4px; width: 90%; height: 33px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 8px; outline: none;"></textarea>
 <br>
-  <div id="result"></div>
+  <div style="margin-top: 30px;" id="result"></div>
   <br>
   <button class="button-88" role="button" onclick="sendEmail()" id="sendBtn">Send Email</button>
 </div>
