--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -149,13 +149,13 @@ border-color: gold;
 <div class="line"></div>
 <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
 
-  <span style="margin-top: 22px; margin-bottom: 5px; font-size: 20px;">Send To: </span>
+  <span style="margin-top: 22px; margin-bottom: 5px; font-size: 20px;">Send To*: </span>
   <textarea maxlength="50" placeholder="send.to@email.com" id="sendto" style="margin-top: 4px; width: 90%; height: 30px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 8px; outline: none;"></textarea>
 <br>
-  <span style="margin-top: 12px; margin-bottom: 5px; font-size: 20px;">Title: </span>
+  <span style="margin-top: 12px; margin-bottom: 5px; font-size: 20px;">Title*: </span>
   <textarea maxlength="50" placeholder="Tool Sphere Mail Sender Test" id="title" style="margin-top: 4px; width: 90%; height: 50px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
 <br>
-  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Body: </span>
+  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Body*: </span>
   <textarea maxlength="2000" placeholder="This Email Was Sent Using <a herf='https://tool-sphere.github.io/tools/email-sender/'>Tool Sphere</a>" id="body" style="margin-top: 4px; width: 90%; height: 140px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
   
@@ -169,7 +169,7 @@ border-color: gold;
   <label for="type_html"  style="font-size: 18px;">HTML</label>
   </form>
 <br>
-  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">API Key: <a target="_blank" href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" style="font-size: 12px; color: gold;">Click To get API key for free</a></span>
+  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">API Key*: <a target="_blank" href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" style="font-size: 12px; color: gold;">Click To get API key for free</a></span>
    <textarea maxlength="100" placeholder="YourSuperSecretAPIKey**" id="apikey" type="password" style="margin-top: 4px; width: 90%; height: 33px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 8px; outline: none;"></textarea>
 <br>
   <div style="margin-top: 30px;" id="result"></div>
