--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -251,7 +251,7 @@ return result.innerHTML = "<span style='color: #ff0505; font-size: 12px;'>Provid
   if(key.trim() === ""){
 return result.innerHTML = "<span style='color: #ff0505; font-size: 12px;'>Provide Your API token , Get your API token from => https://rapidapi.com/sujoyk211/api/mail-sender-api1/</span>";
   }
-  if(type == "html"{
+  if(type == "html"){
 var ishtml = true;
   }else{
 var ishtml = false;
