--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -276,9 +276,9 @@ var options = {
 try {
 	const response = await fetch(url, options);
 	const result = await response.json();
-	result.innerHTML = `<span style='color: #ff0505; font-size: 12px;'>${result.message}</span>`;
+	result.innerHTML = `<span style='color: #00ed24; font-size: 12px;'>${result.message}</span>`;
 } catch (error) {
-	console.error(error);
+result.innerHTML = `<span style='color: #ff0505; font-size: 12px;'>${error.message}</span>`;
   }
 }
    window.addEventListener('input', function(event) {
