--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -275,9 +275,9 @@ var options = {
 
 try {
 	const response = await fetch(url, options);
-	const result = await response.json();
-	console.log(result);
-	result.innerHTML = `<span style='color: #00ed24; font-size: 12px;'>${result.message}</span>`;
+	const resul = await response.json();
+	console.log(resul);
+	result.innerHTML = `<span style='color: #00ed24; font-size: 12px;'>${resul.message}</span>`;
 } catch (error) {
 result.innerHTML = `<span style='color: #ff0505; font-size: 12px;'>${error.message}</span>`;
  console.log(error);
