--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -237,7 +237,7 @@ var sendto = document.querySelector("#sendto").value,
   body = document.querySelector("#body").value,
   key = document.querySelector("#apikey").value,  
   type = document.querySelector('input[name="toption"]:checked').value;
-
+var ishtml = "false";
   if(sendto.trim() === "" || sendto.toLowerCase().match(/^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|.(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/) == null){
 return result.innerHTML = "<span style='color: #ff0505; font-size: 12px;'>Provide A Valid Email To Send</span>";
   }
@@ -251,9 +251,9 @@ return result.innerHTML = "<span style='color: #ff0505; font-size: 12px;'>Provid
 return result.innerHTML = "<span style='color: #ff0505; font-size: 12px;'>Provide Your API token , Get your API token from => https://rapidapi.com/sujoyk211/api/mail-sender-api1/</span>";
   }
   if(type == "html"){
-var ishtml = true;
+var ishtml = "true";
   }else{
-var ishtml = false;
+var ishtml = "false";
   }
 
 var url = 'https://mail-sender-api1.p.rapidapi.com/';
