--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Free Text Translator | Translate Any Language using out translate Tool</title>
+  <title>Free Text Translator with Auto Language Detector | Detect and Translate Any Language using out translate Tool</title>
   <link rel="canonical" href="https://tool-sphere.github.io/" />
   <meta name="description" content="">
  <meta name="keywords" content="">
@@ -67,15 +67,6 @@
         background-color: cyan;  /*cyan*/
   }
 }
-  input[type="radio"] {
-background-color: rgba(255, 255, 255, 0.7); /* transparent white */
-  border-color: gold;
-  }
-  input[type="radio"]:checked {
-      accent-color: #00fc2a;
-    background-color: transparent;
-border-color: gold;
-  }
 .button-88 {
   -webkit-tap-highlight-color: transparent;
   display: flex;
@@ -141,41 +132,14 @@ border-color: gold;
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
 <h1></h1>
   </div> 
- <span style="text-align: center; align-items: center; font-size: 4em;"><span class="gold-badge" style="margin-left: 10px;">Trending</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+ <span style="text-align: center; align-items: center; font-size: 4em;"><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
 <div class="line"></div>
-<div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
 
-  <span style="margin-top: 22px; margin-bottom: 5px; font-size: 20px;">Send To*: </span>
-  <textarea maxlength="50" placeholder="send.to@email.com" id="sendto" style="margin-top: 4px; width: 90%; height: 30px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 8px; outline: none;"></textarea>
-<br>
-  <span style="margin-top: 12px; margin-bottom: 5px; font-size: 20px;">Title*: </span>
-  <textarea maxlength="50" placeholder="Tool Sphere Mail Sender Test" id="title" style="margin-top: 4px; width: 90%; height: 50px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
-<br>
-  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Body*: </span>
-  <textarea maxlength="2000" placeholder="This Email Was Sent Using <a herf='https://tool-sphere.github.io/tools/email-sender/'>Tool Sphere</a>" id="body" style="margin-top: 4px; width: 90%; height: 140px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
-  <br>
-  
- <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Format Type: </span>
- <form id="format_type">
-<input type="radio" id="type_txt" name="toption" value="text" checked>
-  <label for="type_txt" style="font-size: 18px;">Text</label>
-  <br>
-  <input type="radio" id="type_html" name="toption" value="html">
-  
-  <label for="type_html"  style="font-size: 18px;">HTML</label>
-  </form>
-<br>
-  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">API Key*: <a target="_blank" href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" style="font-size: 12px; color: gold;">Click To get API key for free</a></span>
-   <textarea maxlength="100" placeholder="YourSuperSecretAPIKey**" id="apikey" type="password" style="margin-top: 4px; width: 90%; height: 33px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 8px; outline: none;"></textarea>
-<br>
-  <div style="margin-top: 30px;" id="result"></div>
-  <br>
-  <button class="button-88" role="button" onclick="sendEmail()" id="sendBtn">Send Email</button>
-</div>
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
-<h2>Our Email Sender UI tool helps you to send emails for free without creating or linking your mail account, and you can also send html templates using our tool, you can use this tool in many purposes like you can use our <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Email Sender API</a> to send emails messages through your project for login otp send or somthing;</h2>
+<h2>Translate Any Language With our Translator Tool, Use Auto Detect Option to Detect The Language of The text, Our Tool Is free Forever We Provide This Tool For Students, 
+This Tool Can Translate Text From Different Languages Bookmark This Page named Translator to use this page in future | Text Translator Is now in your finger tips, no login or credit card or subscription required means it is free forever for you everyone 🎉</h2>
 
 <!--- FAQ --->
 
