--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -148,8 +148,8 @@ This Tool Can Translate Text From Different Languages Bookmark This Page named T
 
 <div class="line"></div> <br>
 
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How to send html and text email message from my project?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Use out <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Email Sender API</a> To send unlimited Html and text Emails for free from your project or backend server securely without having delay.</span><br>
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How does the free translator tool work?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our free translator tool utilizes advanced algorithms to accurately translate text in various languages. Simply enter your text, and the tool will provide instant translations with precision.</span><br>
 
 <div class="line"></div> <br>
   
