--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -153,36 +153,31 @@ This Tool Can Translate Text From Different Languages Bookmark This Page named T
 
 <div class="line"></div> <br>
   
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Do I need to create an account to use your email sender?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: No, you don't need to create an account or log in to send emails while using our tool to send emails.</span><br>
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is registration or login required to use the translation service?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: No, our translation service is completely free, and no registration or login is required. Enjoy hassle-free language translation without any barriers.</span><br>
 
 <div class="line"></div> <br>
 
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is there a limit on how many emails I can send?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You can send unlimited emails for free! by using our tool</span><br>
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I translate text in any language using your platform?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Absolutely! Our platform supports translation for a wide range of languages, allowing you to translate text seamlessly in the language of your choice.</span><br>
 
 <div class="line"></div> <br>
 
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I send both text and HTML emails?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, you can choose to send either text or HTML emails.</span><br>
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is the translator suitable for students?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, our translator is an excellent tool for students. It provides accurate translations for educational purposes, making language learning and understanding diverse content easier.</span><br>
 
 <div class="line"></div> <br>
 
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How secure is your service?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: We take security seriously and implement various measures to protect your data. However, please note that no online service is foolproof.</span><br>
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Does the translator offer AI language detection?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, our platform incorporates AI language detection, ensuring precise identification of the input language for accurate and efficient translations.</span><br>
 
 <div class="line"></div> <br>
 
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is there an API for developers?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, we have an API that you can use to integrate the email sending functionality into your projects <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Mail Sender API link</a></span><br>
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I use the translator on any device with an easy-to-use interface?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Certainly! Our translator features a user-friendly interface, making it accessible on various devices, ensuring a seamless and enjoyable translation experience.</span><br>
 
 <div class="line"></div> <br>
 
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What information do I need to send an email?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You'll need the recipient's email address, a subject line, and the email content, and the free API key which you can get from <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Mail Sender API Rapid API</a>.</span><br>
-
- <div class="line"></div> <br>
- 
 <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2024 tool-sphere. All rights reserved.</p>
   <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a> <br><br>
