--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -130,7 +130,7 @@
 </div>
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
-<h1></h1>
+<h1>Free Text Translator | Translate Any Language Using Our Tool Without any Login | We Provide Language Detection To Detect The Language Of The Text</h1>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
