--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -136,6 +136,9 @@
  
 <div class="line"></div>
 
+  <lable for="ttt" style="">Text to Translate:</lable>
+<input id="ttt" style="" type="text">
+  
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
 <h2>Translate Any Language With our Translator Tool, Use Auto Detect Option to Detect The Language of The text, Our Tool Is free Forever We Provide This Tool For Students, 
