--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -136,8 +136,8 @@
  
 <div class="line"></div>
 
-  <lable for="ttt" style="">Text to Translate:</lable>
-<input id="ttt" style="" type="text">
+  <lable for="ttt" style="margin-top: 4px; margin-left: 5px;">Text to Translate:</lable>
+<textarea id="ttt" style="margin-top: 4px; margin-left: 5px; width: 90%; height: 40px; margin: 0 auto;" type="text"></textarea>
   
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
