--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -101,7 +101,7 @@
 </style>
 </head>
 
-<body>
+<body style="display: flex; flex-direction: column;">
 <div class="nav">
   <input type="checkbox" id="nav-check">
   <div class="nav-header">
