--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -136,7 +136,8 @@
  
 <div class="line"></div>
 
-  <lable for="ttt" style="margin-top: 4px; margin-left: 5px;">Text to Translate:</lable>
+  <lable for="ttt" style="margin-top: 4px; margin-left: 5px;">Text to Translate:</lable><br>
+  
 <textarea id="ttt" style="margin-top: 4px; margin-left: 5px; width: 90%; height: 120px; margin: 0 auto;" type="text"></textarea>
   
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
