--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -101,7 +101,7 @@
 </style>
 </head>
 
-<body style="display: flex; flex-direction: column;">
+<body style="display: flex;">
 <div class="nav">
   <input type="checkbox" id="nav-check">
   <div class="nav-header">
@@ -138,7 +138,7 @@
 
   <lable for="ttt" style="margin-top: 4px; margin-left: 5px;">Text to Translate:</lable><br>
   
-<textarea id="ttt" style="margin-top: 4px; margin-left: 5px; width: 90%; height: 120px; margin: 0 auto;" type="text"></textarea>
+<textarea id="ttt" style="margin-top: 4px; margin-left: 5px; width: 90%; height: 10%; margin: 0 auto;"></textarea>
   
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
