--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -136,10 +136,9 @@
  
 <div class="line"></div>
 
-  <lable for="ttt" style="margin-top: 4px; margin-left: 5px;">Text to Translate:</lable><br>
-  
+  <label for="ttt" style="margin-top: 4px; margin-left: 5px;">Text to Translate:</label><br>
 <textarea id="ttt" style="margin-top: 4px; margin-left: 5px; width: 90%; height: 10%; margin: 0 auto;"></textarea>
-  
+
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
 <h2>Translate Any Language With our Translator Tool, Use Auto Detect Option to Detect The Language of The text, Our Tool Is free Forever We Provide This Tool For Students, 
