--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -137,7 +137,7 @@
 <div class="line"></div>
 
   <label for="ttt" style="margin-top: 4px; margin-left: 5px;">Text to Translate:</label><br>
-<textarea id="ttt" style="margin-top: 4px; margin-left: 5px; width: 90%; height: 10%; margin: 0 auto;"></textarea>
+<textarea id="ttt" style="margin-top: 4px; margin-left: 5px; width: 90%; height: 10%;"></textarea>
 
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
