--- a/tools/translator/index.html
+++ b/tools/translator/index.html
@@ -136,8 +136,8 @@
  
 <div class="line"></div>
 
-  <label for="ttt" style="margin-top: 4px; margin-left: 5px;">Text to Translate:</label><br>
-<textarea id="ttt" style="margin-top: 4px; margin-left: 5px; width: 90%; height: 10%;"></textarea>
+ <!--- <label for="ttt" style="margin-top: 4px; margin-left: 5px;">Text to Translate:</label><br>--->
+<textarea id="ttt" style="display: block; margin-top: 4px; margin-left: 5px; width: 90%; height: 10%; margin: 0 auto;"></textarea>
 
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
