--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <div class="nav-links">
     <a href="/">🏠 • Home</a>
     <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a>
-    <a href="/tools/translator">💬 • Text Translator </a>
-   <!--- <a href="/tools/email-sender">📨 • Email Sender </a>
-    <a href="/privacy-policy">🔏 • Privacy Policy </a>--->
+   <!--- <a href="/tools/translator">💬 • Text Translator </a>--->
+    <a href="/tools/email-sender">📨 • Email Sender </a>
+    <a href="/privacy-policy">🔏 • Privacy Policy </a>
     <a href="/about-us">🔖 • About Us </a>
     <a href="/contact-us">☎️ • Contact Us </a>
   </div>
