--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ The platform automatically detects the source language and offers autocorrection
   <a href="/contact-us" style="color: #fff;">Contact Us</a> <br><br>
     </footer>
 </body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
+     crossorigin="anonymous"></script>
 </html>
 
 
