--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -207,7 +207,8 @@ function detectLanguage(code) {
     return result.language;
 }    
   </script>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
+     crossorigin="anonymous"></script>
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
