--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -289,5 +289,7 @@ result.innerHTML = `<span style='color: #ff0505; font-size: 12px;'>Error When se
 }
 	  }
   </script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
+     crossorigin="anonymous"></script>
 </body>
   </html>
