--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -73,6 +73,7 @@
 }
   }
 </style>
+  <script type='text/javascript' src='//pl22229512.toprevenuegate.com/7a/25/b8/7a25b8f7f637f7e331f04eb59840ff3d.js'></script>
 </head>
 
 <body>
