--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+<script type='text/javascript' src='//pl22229512.toprevenuegate.com/7a/25/b8/7a25b8f7f637f7e331f04eb59840ff3d.js'></script>
 </head>
 
 <body>
