--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -195,7 +195,7 @@ fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector(
   editor.setValue(dy.result.data[0]);
   prompt_.disabled = false;
   btn.disabled = false;
-  gh.innerHTML = "Your Code Generated Successfully ✅, Thanks For using out Tool";
+  gh.innerHTML = "Your Code Generated Successfully ✅";
   editor.setReadOnly(false);
   gcode.scrollIntoView({
   behavior: "smooth",
