--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -176,7 +176,7 @@ prompt_.focus();
         return;
       };
       prompt_.blur();
-      gh.innerHTML = "GENERATING YOUR CODE.. <br> Please Dont close the tab this process can take upto 10 seconds Please Be patient, Thank You <br> <div style='margin-top: 8px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> <br> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code";
+      gh.innerHTML = "GENERATING YOUR CODE.. <br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ <br> Please Dont close the tab this process can take upto 10 seconds Please Be patient, Thank You <br> <div style='margin-top: 8px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> <br> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code";
     prompt_.disabled = true;
     btn.disabled = true;
       editor.setValue();
@@ -231,3 +231,4 @@ function detectLanguage(code) {
   </html>
 
 
+  
