--- a/index.html
+++ b/index.html
@@ -60,17 +60,13 @@
 Additionally, our platform provides a robust debugging environment, empowering you to troubleshoot your code efficiently. If you wish to enhance your code with new features, our system supports seamless integration. Experience the convenience of our user-friendly interface and take advantage of a comprehensive set of tools for an enhanced coding experience.</p>
   
 <div class="line"></div>
-  <!---
-  <span class="pro-ttle">» <a href="/tools/translator" style="color: white;">Text Translator</a> :   <span class="pink-badge" style="margin-left: 10px;">Free</span></span>
-  <p class="abt-para-pro">We introduce a Text Translator designed to seamlessly translate content across various languages with built-in language detection and autocorrection features. Our Translator provides a user-friendly solution for effortless language conversion, ensuring accurate and error-free translations without any cost for users.
-  </p><p class="abt-para-pro">
-The platform automatically detects the source language and offers autocorrection to refine translated text. This ensures precision and clarity in your translations. If you desire to enrich your content with additional linguistic features, our system supports smooth integration. Explore the convenience of our user-friendly interface and leverage a comprehensive suite of tools for an enhanced text translation experience.</p>
 
-  <div class="line"></div>
-  --->
   <span class="pro-ttle">» <a href="/tools/email-sender" style="color: white;">Email Sender UI</a> :   <span class="gold-badge" style="margin-left: 10px;">Trending</span> <span class="pink-badge" style="margin-left: 10px;">Free</span></span>
   <p class="abt-para-pro">Introducing our Email Sender Tool, a state-of-the-art platform that redefines email communication. Send unlimited emails effortlessly to anyone, anytime, anywhere, all with the flexibility of HTML and text email formats. Enjoy the freedom of our absolutely free service, boasting low latency and lightning-fast delivery. Our tool is not only easy to use but also showcases the best UI, providing a seamless and visually appealing experience. With a commitment to user satisfaction, we ensure an intuitive interface for quick and error-free email dispatch. Elevate your communication game with our feature-rich, user-friendly tool, designed to make email sending efficient, effective, and enjoyable.</p>
-  
+
+  <div class="line"></div>
+
+  <p class="abt-para-pro">Why To Use Our Tools? : <br> We Provide Free tools for all without any credit card details use our tools for free we dont charge any cost for it we will provide our tools free forever if you have any doubt you can contact with us </p>
   <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2024 tool-sphere. All rights reserved.</p>
   <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a> <br><br>
