--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -163,6 +163,10 @@
   <a href="/about-us" style="color: #fff;">About Us</a> <br><br>
   <a href="/contact-us" style="color: #fff;">Contact Us</a> <br><br>
     </footer>
+    <div id="cookie-consent">
+    <p>This website uses cookies for ad personalization and to enhance your browsing experience.</p>
+    <button id="accept-cookies">Accept</button>
+    </div>
   <script>
     var btn = document.querySelector("#genbtn");
     var prompt_ = document.querySelector("#prmpt");
@@ -206,7 +210,20 @@ fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector(
 function detectLanguage(code) {
     var result = hljs.highlightAuto(code);
     return result.language;
-}    
+}   
+    const cookieConsent = document.getElementById('cookie-consent');
+const acceptButton = document.getElementById('accept-cookies');
+
+acceptButton.addEventListener('click', () => {
+  // Simulate storing consent (replace with actual storage logic)
+  localStorage.setItem('cookieConsentAccepted', true);
+  cookieConsent.style.display = 'none';
+});
+
+// Check if consent is already stored (replace with actual logic)
+if (localStorage.getItem('cookieConsentAccepted')) {
+  cookieConsent.style.display = 'none';
+  }
   </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
      crossorigin="anonymous"></script>
