--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Additionally, our platform provides a robust debugging environment, empowering y
     <p>This website uses cookies for ad personalization and to enhance your browsing experience.</p>
     <button id="accept-cookies">Accept</button>
     </div>
-  <style>
+  <script>
     const cookieConsent = document.getElementById('cookie-consent');
 const acceptButton = document.getElementById('accept-cookies');
 
@@ -90,7 +90,9 @@ acceptButton.addEventListener('click', () => {
 if (localStorage.getItem('cookieConsentAccepted')) {
   cookieConsent.style.display = 'none';
     }
-  </style>
+  </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
+     crossorigin="anonymous"></script>
 </body>
 </html>
 
