--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+<script src="https://alwingulla.com/88/tag.min.js" data-zone="57675" async data-cfasync="false"></script>
 </head>
 
 <body>
