--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -20,6 +20,7 @@
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
   <link rel="canonical" href="https://tool-sphere.github.io/" />
+<script src="https://alwingulla.com/88/tag.min.js" data-zone="57675" async data-cfasync="false"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ace.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
 <style>
